--- a/backend/billing-service/src/main/resources/application-prod.yml
+++ b/backend/billing-service/src/main/resources/application-prod.yml
@@ -65,8 +65,8 @@ aws:
     enabled: ${AWS_S3_ENABLED:true}
     bucket-name: ${AWS_S3_BUCKET_NAME:mutrapro-dev-files}
     region: ${AWS_S3_REGION:ap-southeast-1}
-    access-key: ${AWS_S3_ACCESS_KEY}
-    secret-key: ${AWS_S3_SECRET_KEY}
+    access-key: ${AWS_S3_ACCESS_KEY:}
+    secret-key: ${AWS_S3_SECRET_KEY:}
 
 # Feign Client Configuration (timeout settings)
 feign:
