feat: enhance authentication service with specialist ID handling
- Integrated SpecialistServiceClient into AuthenticationService to fetch specialist ID based on user role.
- Updated JWT claims to include specialist ID for users with specific roles (TRANSCRIPTION, ARRANGEMENT, RECORDING_ARTIST).
- Added configuration for specialist service in application YAML files for both development and production environments.
- Introduced a new endpoint in ServiceRequestController for fetching basic service request information without files, optimizing performance.
- Enhanced performance logging in TaskAssignmentService to track execution times for critical operations.

--- a/backend/identity-service/src/main/resources/application-dev.yml
+++ b/backend/identity-service/src/main/resources/application-dev.yml
@@ -61,6 +61,11 @@ outbound:
     client-secret: "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"
     redirect-uri: "http://localhost:5173/authenticate"
 
+# Specialist Service Configuration
+specialist:
+  service:
+    base-url: ${SPECIALIST_SERVICE_BASE_URL:http://localhost:8086}
+
 # Management & Actuator
 management:
   endpoints:
