feat: add specialist availability checking and slot management features
- Introduced a new public endpoint to check specialist availability for specific time slots.
- Enhanced the StudioBookingService to validate slot durations and start times against predefined rules.
- Implemented error handling for unavailable slots and added new error codes for better clarity.
- Updated the frontend to include new routes and API calls for managing specialist slots, including creating, updating, and deleting slots.
- Integrated Kafka event publishing for booked slots to ensure asynchronous processing.

--- a/backend/project-service/src/main/resources/application-dev.yml
+++ b/backend/project-service/src/main/resources/application-dev.yml
@@ -69,6 +69,7 @@ app:
       milestone.ready.for.payment.notification: milestone-ready-for-payment-notification
       billing.revision.fee.refunded: billing-revision-fee-refunded # New topic for refunded revision fees
       chat.system.message: chat-system-message-events
+      slot.booked: slot-booked-events
   late-discount:
     policy-version: late_discount_v1
     grace-hours: 6
