--- a/backend/specialist-service/src/main/resources/application-dev.yml
+++ b/backend/specialist-service/src/main/resources/application-dev.yml
@@ -16,6 +16,16 @@ spring:
   sql:
     init:
       mode: never
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    consumer:
+      group-id: specialist-service
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      auto-offset-reset: earliest
+      enable-auto-commit: false
+      properties:
+        spring.json.trusted.packages: "*"
   servlet:
     multipart:
       enabled: true
@@ -60,6 +70,12 @@ project:
 identity:
   service:
     base-url: ${IDENTITY_SERVICE_BASE_URL:http://localhost:8081}
+
+# Event Topics Configuration
+app:
+  event-topics:
+    mappings:
+      slot.booked: slot-booked-events
 
 # Management & Actuator
 management:
