feat: implement slot release functionality for contract expiration and cancellation
- Added methods in ContractService to release slots for bookings when contracts expire or are cancelled.
- Introduced a new event publishing mechanism in StudioBookingService to handle slot releases via Kafka.
- Updated application configuration files to include new Kafka topics for released slots.
- Enhanced SpecialistSlotService to manage slot availability based on contract status changes.

--- a/backend/project-service/src/main/resources/application-dev.yml
+++ b/backend/project-service/src/main/resources/application-dev.yml
@@ -70,6 +70,7 @@ app:
       billing.revision.fee.refunded: billing-revision-fee-refunded # New topic for refunded revision fees
       chat.system.message: chat-system-message-events
       slot.booked: slot-booked-events
+      slot.released: slot-released-events
   late-discount:
     policy-version: late_discount_v1
     grace-hours: 6
