--- a/backend/project-service/src/main/resources/application-prod.yml
+++ b/backend/project-service/src/main/resources/application-prod.yml
@@ -72,6 +72,7 @@ app:
       billing.revision.fee.refunded: ${KAFKA_TOPIC_BILLING_REVISION_FEE_REFUNDED:billing-revision-fee-refunded} # New topic for refunded revision fees
       chat.system.message: ${KAFKA_TOPIC_CHAT_SYSTEM_MESSAGE:chat-system-message-events}
       slot.booked: ${KAFKA_TOPIC_SLOT_BOOKED:slot-booked-events}
+      slot.released: ${KAFKA_TOPIC_SLOT_RELEASED:slot-released-events}
   late-discount:
     policy-version: ${LATE_DISCOUNT_POLICY_VERSION:late_discount_v1}
     grace-hours: ${LATE_DISCOUNT_GRACE_HOURS:6}
