--- a/backend/specialist-service/src/main/resources/application-dev.yml
+++ b/backend/specialist-service/src/main/resources/application-dev.yml
@@ -76,6 +76,7 @@ app:
   event-topics:
     mappings:
       slot.booked: slot-booked-events
+      slot.released: slot-released-events
 
 # Management & Actuator
 management:
