feat: implement review and rating system for bookings and specialists
- Added new SupervisorInfo class to StudioBookingResponse for recording supervision details.
- Enhanced StudioBookingService to enrich booking responses with supervisor information.
- Introduced review creation and retrieval functionality for tasks and requests, allowing customers to rate their experiences.
- Updated various components to display average ratings and reviews for specialists, improving user engagement and feedback mechanisms.
- Added new API endpoints for managing reviews and ratings, ensuring seamless integration with existing services.
- Updated application configuration to include review-related Kafka topics for event-driven architecture.

--- a/backend/project-service/src/main/resources/application-prod.yml
+++ b/backend/project-service/src/main/resources/application-prod.yml
@@ -73,6 +73,7 @@ app:
       chat.system.message: ${KAFKA_TOPIC_CHAT_SYSTEM_MESSAGE:chat-system-message-events}
       slot.booked: ${KAFKA_TOPIC_SLOT_BOOKED:slot-booked-events}
       slot.released: ${KAFKA_TOPIC_SLOT_RELEASED:slot-released-events}
+      review.created: ${KAFKA_TOPIC_REVIEW_CREATED:review-created-events}
   late-discount:
     policy-version: ${LATE_DISCOUNT_POLICY_VERSION:late_discount_v1}
     grace-hours: ${LATE_DISCOUNT_GRACE_HOURS:6}
