--- a/backend/project-service/src/main/resources/application-dev.yml
+++ b/backend/project-service/src/main/resources/application-dev.yml
@@ -71,6 +71,7 @@ app:
       chat.system.message: chat-system-message-events
       slot.booked: slot-booked-events
       slot.released: slot-released-events
+      review.created: review-created-events
   late-discount:
     policy-version: late_discount_v1
     grace-hours: 6
