--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-navigation/bottom-tabs": "^7.8.6",
     "@react-navigation/drawer": "^7.7.4",
     "@react-navigation/native": "^7.1.21",
@@ -22,6 +23,7 @@
     "expo": "~54.0.25",
     "expo-auth-session": "^7.0.9",
     "expo-av": "~16.0.7",
+    "expo-clipboard": "~8.0.8",
     "expo-crypto": "^15.0.7",
     "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.19",
