feat: enhance revenue statistics and transaction handling in wallet service
- Added average transaction value calculations for topups and services in RevenueStatisticsResponse.
- Refactored WalletTransactionRepository to simplify revenue and transaction count queries, improving performance.
- Updated WalletService to process and aggregate revenue data and transaction counts for current and previous periods.
- Introduced new charts in the Dashboard component using ECharts for better data visualization.
- Added routing for WalletDashboard in the frontend for improved navigation.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "bootstrap": "^5.3.8",
     "buffer": "^6.0.3",
     "dayjs": "^1.11.18",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.5",
     "flat-embed": "^2.5.1",
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
