--- a/mobile/package.json
+++ b/mobile/package.json
@@ -29,6 +29,7 @@
     "expo-file-system": "~19.0.19",
     "expo-image-picker": "^17.0.9",
     "expo-linear-gradient": "~15.0.7",
+    "expo-print": "~15.0.8",
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "^15.0.9",
